--- a/PageControl_example/res/layout/activity_main.xml
+++ b/PageControl_example/res/layout/activity_main.xml
@@ -18,6 +18,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        app:colorMovingPoint="#ff0000"
+        app:colorPoints="#00ff00" >
+    </com.suiyiyi.pagecontrol.PageControl>
 
 </RelativeLayout>
